--- a/package.json
+++ b/package.json
@@ -40,18 +40,24 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^12.23.12",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
+    "react-image-crop": "^11.0.10",
+    "react-image-gallery": "^1.4.0",
+    "react-player": "^3.3.1",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^7.7.0",
@@ -67,6 +73,7 @@
     "@types/node": "^22.7.3",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "@types/react-image-gallery": "^1.2.4",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
