--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/react-stripe-js": "^3.9.0",
+    "@stripe/stripe-js": "^7.8.0",
+    "@tanstack/react-query": "^5.85.3",
     "@tanstack/react-virtual": "^3.13.12",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -58,6 +62,7 @@
     "react-image-crop": "^11.0.10",
     "react-image-gallery": "^1.4.0",
     "react-player": "^3.3.1",
+    "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^7.7.0",
