--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
+    "react-google-drive-picker": "^1.2.2",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.6.0",
     "react-image-crop": "^11.0.10",
