--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.3",
-    "react-router-dom": "^7.7.0",
+    "react-router": "^6.26.2",
+    "react-router-dom": "^6.26.2",
     "recharts": "^2.15.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
